--- a/metadata.yaml
+++ b/metadata.yaml
@@ -1,5 +1,8 @@
 _repo: Venne-Richerdes-b-Roman-aus-der-Geschichte-Goslars_75443
 _version: 0.1.0
+covers:
+- cover_type: archival
+  image_path: 75443-h/images/cover.jpg
 creator:
   author:
     agent_name: Kassebaum, Hermann
@@ -9,6 +12,8 @@ creator:
     url: http://www.gutenberg.org/2009/agents/57998
     wikipedia: https://de.wikipedia.org/wiki/Hermann_Kassebaum
 description: ''
+edition_identifiers:
+  edition_id: http://www.gutenberg.org/ebooks/75443#Venne-Richerdes-b-Roman-aus-der-Geschichte-Goslars
 gutenberg_issued: '2025-02-22'
 gutenberg_type: Text
 identifiers:
